[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Park JIWoo <jeewoo19930315@gmail.com>"]
description = "Test Wasm Project"
licence = "MIT/Apache-2.0"
repository = "https://github.com/Azabell1993/FirstWebAssemblyTest"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
